* 2016.07.07 - added 'no_os_in_suggested_path' to customization of packages to avoid
               adding OS info at the end of the suggested path. Useful when installing 
               various OS-independent datasets

* 2016.07.06 - added 'force_ask_path' to customization of packages to ask path
               in interactive mode. Useful when installing large training sets
               for DNN 

* 2016.07.04 - checking if package was already installed...

* 2016.07.03 - fixed freeglut description

* 2016.07.01 - fixed a few bugs reported by Michael Mcgeagh

* 2016.06.29 * added more soft descriptions (Apache thrift, commons-io)

* 2016.06.28 * added support to pass environment variables to installation script via -Dkey=value (similar to cMAKE)

* 2016.06.26 * added support for the new CPU format in Linux/Android 

* 2016.06.22 * added support to customize installation path with any extra deps ('add_to_path')

* 2016.06.20 * added sh to Android description

* 2016.06.19 * fixing Boost description for Linux
             * fixing openBLAS description for Linux and Android
             * fixing PENCIL benchmark description
             * fixing ViennaCL and TBB for Linux

* 2016.06.11 * added support to skip GPU detection (for example, not needed 
               during compiler flag crowd-tuning but may cause problems),
               and to force platform.init UOA

* 2016.06.07 * improving package manager:
               - detecting host CPU info and passing CK_HOST_CPU_NUMBER_OF_PROCESSORS to process script
               - passing extra env to process script
               - running pre-processing python script
               - running scripts from another entry (light inheritance)
               - adding CLBLAST soft description

* 2016.05.30 * support for new CK web server

* 2016.05.29 - adding 'exchange_locally' mode to platform.* detection and info exchange

* 2016.05.17 - improving different soft description